# HotamSpec

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.template.txt  CONTRIBUTING.md  GEMINI.md  LICENSE  LICENSE-APACHE  Makefile  README.md  go.mod
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/hotam/: all_violations.go  apply_proposal.go  apply_proposal_json_test.go  batch_test.go  brief.go  brief_test.go  claude_md_current_test.go  claude_md_current_wiring.go  claudemd_links_test.go  common.go  common_test.go  confront.go  confront_gate.go  confront_gate_test.go  confront_proposal_test.go  confront_test.go  domain_flag_chain_test.go  due.go  due_test.go  external_e2e_test.go  gate_cmd.go  gen_code.go  gen_code_test.go  gen_spec.go  gen_spec_profile_test.go  gen_spec_test.go  init_cmd.go  init_cmd_test.go  init_project.go  init_project_born_obligated_e2e_test.go  init_project_e2e_test.go  init_project_test.go  inspect.go  inspect_test.go  json_contract_test.go  json_flags_test.go  land.go  main.go  (+23 more)
delegations/: DG-1.md  DG-2.md  DG-3.md  DG-4.md
docs/: AUTHORED-SPEC-CONTRACT.md  GEN-CODE-CONTRACT.md  PROPOSAL-REFERENCE.md  QUICKSTART-CONSUMER.md
domains/: .active-domain
proposals/: draft-R-authored-prose-no-live-tallies.json  draft-R-gate-cohort-explicit-denominator.json  draft-R-generations-inherit-doc-test-code.json  draft-R-orientation-faq-answerable-assert.json  draft-R-pipeline-live-state-from-typed-carriers.json  draft-R-shared-projections-mode-independent.json  update-R-authored-spec-links-mechanically-checked-f1.json
spec/: .gitignore  README.md  pyproject.toml
spec/docs/thinking/: agent.md  assumption.md  attention.md  axis.md  closure.md  conflict.md  conscience.md  context.md  contextbudget.md  domain.md  entity.md  glossary.md  goal.md  graph.md  invariants.md  lifecycle.md  operator.md  process.md  proposal.md  reflection.md  requirement.md  scope.md  signoff.md  stakeholder.md  topic.md
spec/docs/tools/: apply_proposal.md  attention.md  attention_hook.md  audit_atomicity.md  audit_tensions.md  boot_cite_status.md  claude_md_diff_watch.md  closure.md  confront.md  context.md  context_producer.md  create_agent.md  create_axis.md  create_domain.md  create_entity_type.md  emit_cipher.md  gate.md  gate_status.md  gen_spec.md  hotam_req.md  invoke_agent.md  land.md  mark_revisit_evaluated.md  record_delegation.md  review.md  setup_context_hook.md  setup_hooks.md  spawn_agent.md  spawn_log_isolation_status.md  tick.md  ticket_comment.md  ticket_create.md  ticket_edit.md  ticket_list.md  ticket_move.md  ticket_show.md  what_now.md
spec/scripts/: build_wheel.py  export_graph_to_json.py  populate_tools.py
spec/src/hotam_spec/: __init__.py  assumption.py  attention.py  axis.py  claude_md.py  conflict.py  doc_readers.py  domain_resolution.py  enforcer_resolution.py  entity.py  glossary.py  graph.py  invariants.py  invariants_table_engine.py  lifecycle.py  node_schemas.py  operator.py  process.py  project_paths.py  proposal.py  reflection.py  repo_paths.py  requirement.py  runtime_paths.py  scope_projection.py  signoff.py  stakeholder.py  template_loader.py  text.py
spec/src/hotam_spec/_data/: enforcer_map.json
spec/src/hotam_spec/_tools/: .gitignore
spec/src/hotam_spec/cli/: __init__.py  _dispatch.py  _path_setup.py  apply_proposal.py  attention.py  attention_hook.py  audit_atomicity.py  audit_tensions.py  claude_md_diff_watch.py  confront.py  context.py  context_producer.py  create_agent.py  create_axis.py  create_domain.py  create_entity_type.py  delegate.py  delegation.py  emit_cipher.py  gate.py  gate_status.py  gen_spec.py  hotam_req.py  invoke_agent.py  land.py  mark_revisit.py  record_delegation.py  review.py  setup_context_hook.py  setup_hooks.py  spawn_agent.py  spawn_log_isolation_status.py  tick.py  ticket.py  update_baseline.py  what_now.py
spec/src/tensio/: __init__.py  assumption.py  axis.py  conflict.py  entity.py  glossary.py  graph.py  invariants.py  lifecycle.py  operator.py  process.py  proposal.py  requirement.py
spec/tests/: _e2e_crud_helpers.py  _protected_baseline_check.py  atomicity_compound_baseline.json  conftest.py  enforcement_perimeter_baseline.json  frozen_aspects_baseline.json  protected_baselines.json  test_agent_declares_purpose.py  test_agent_import_direction.py  test_agent_map.py  test_agent_scoped_constitution.py  test_apply_entity_type_imports.py  test_apply_proposal.py  test_apply_proposal_batch_stress.py  test_apply_proposal_gate_wiring.py  test_apply_proposal_land_log.py  test_assumption_machine_check.py  test_assumption_transition.py  test_atomicity_ratchet.py  test_attention_claude_adapter.py  test_attention_core.py  test_backend_neutral_scope.py  test_bijection.py  test_claude_md_diff_watch.py  test_claude_md_helpers.py  test_claude_md_template.py  test_closure.py  test_concept_map.py  test_conscience.py  test_constitution.py  test_constitution_gen.py  test_content_free.py  test_content_graph.py  test_core_periphery_import_direction.py  test_decisions_bijection.py  test_delegation_marker_honesty.py  test_demo_fixture.py  test_dependency_traversal.py  test_docs_gen.py  test_domain_crystal_embedded.py  (+95 more)
spec/tests/fixtures/: __init__.py  seed.py
spec/tools/: _bootstrap.py  _claude_settings.py  _delegation_store.py  _graph_guard.py  _graph_loader.py  _ticket_store.py  apply_proposal.py  atomicity_enforced_by_updates.json  attention.py  attention_hook.py  audit_atomicity.py  audit_tensions.py  boot_cite_status.py  claude_md_diff_watch.py  closure.py  confront.py  context.py  context_producer.py  create_agent.py  create_axis.py  create_domain.py  create_entity_type.py  delegate.py  emit_cipher.py  gate.py  gate_status.py  gen_enforcer_map.py  gen_spec.py  hotam_req.py  invoke_agent.py  land.py  mark_revisit_evaluated.py  record_delegation.py  review.py  setup_context_hook.py  setup_hooks.py  spawn_agent.py  spawn_log_isolation_status.py  tick.py  ticket_comment.py  (+7 more)
(+1114 files in other folders)
