[project]
name = "hotam-spec"
version = "0.1.0"
description = "Hotam-Spec — executable memory and discipline for a human + LLM-agent fleet (requirements-as-tension-graph, docs-as-code)"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Marat K", email = "klyde13@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
# §4.1 portability W3 — CLI entry points (P4). Each delegates to cli/<tool>:main,
# which re-exports the corresponding tools/<tool>.py main(). The tools/ scripts
# remain runnable as `python tools/<tool>.py` for self-hosting dev.
hotam-gen-spec = "hotam_spec.cli.gen_spec:main"
hotam-what-now = "hotam_spec.cli.what_now:main"
hotam-apply-proposal = "hotam_spec.cli.apply_proposal:main"
hotam-create-domain = "hotam_spec.cli.create_domain:main"
hotam-create-agent = "hotam_spec.cli.create_agent:main"
hotam-create-axis = "hotam_spec.cli.create_axis:main"
hotam-create-entity-type = "hotam_spec.cli.create_entity_type:main"
hotam-confront = "hotam_spec.cli.confront:main"
hotam-audit-atomicity = "hotam_spec.cli.audit_atomicity:main"
hotam-audit-tensions = "hotam_spec.cli.audit_tensions:main"
hotam-emit-cipher = "hotam_spec.cli.emit_cipher:main"
hotam-attention = "hotam_spec.cli.attention:main"
hotam-gate = "hotam_spec.cli.gate:main"
hotam-gate-status = "hotam_spec.cli.gate_status:main"
hotam-land = "hotam_spec.cli.land:main"               # one CLI with subcommands (select/status/verify-closure)
hotam-ticket = "hotam_spec.cli.ticket:main"           # one CLI with subcommands
hotam-delegation = "hotam_spec.cli.delegation:main"   # one CLI with subcommands
hotam-spawn-agent = "hotam_spec.cli.spawn_agent:main"
hotam-invoke-agent = "hotam_spec.cli.invoke_agent:main"
hotam-setup-hooks = "hotam_spec.cli.setup_hooks:main"
hotam-setup-context-hook = "hotam_spec.cli.setup_context_hook:main"
hotam-mark-revisit = "hotam_spec.cli.mark_revisit:main"
hotam-spawn-log-status = "hotam_spec.cli.spawn_log_isolation_status:main"
hotam-update-baseline = "hotam_spec.cli.update_baseline:main"
hotam-claude-md-diff = "hotam_spec.cli.claude_md_diff_watch:main"
hotam-attention-hook = "hotam_spec.cli.attention_hook:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
# Same dev stack as the dev-coin reference. cosmic-ray + z3-solver are listed
# now but UNUSED — they belong to the DEFERRED formal layers (spec-stack 4-8,
# see CLAUDE.md). Pinned here so the deferred layers can be switched on without
# touching the dependency surface.
dev = [
    "cosmic-ray>=8.4.6",
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "z3-solver>=4.16.0.0",
]
